--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,16 @@ x:-o-prefocus, hr3:after {
 	color: #fff!important;
 }
 
+.linkedIn-color {
+  color: #0077B5 !important;
+  border-color: #0077B5 !important;
+}
+
+.linkedIn-color:hover {
+  background-color: #0077B5 !important;
+	color: #fff!important;
+}
+
 .rosso {
 
 color: #E90052;
