type effect added

--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,6 @@ x:-o-prefocus, hr3:after {
 color: #E90052;
 }
 
-
 /* Custom */
 
 
@@ -212,6 +211,7 @@ color: #E90052;
 
 #animazione {
 	display: none;
+
 }
 
 #animazione-footer {
@@ -526,7 +526,7 @@ a:focus {
     -moz-transition-duration: 1s;
 }
 
-.page-scroll .btn-circle:hover i.animated {
+.page-scroll .btn-circle i.animated {
     -webkit-animation-name: pulse;
     -moz-animation-name: pulse;
     -webkit-animation-duration: 1.5s;
@@ -860,7 +860,30 @@ li.skill-bar {
 		    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
 	}
 
+/*Blinking Cursor*/
 
-
-
-/* form contatti */
+.element {
+  margin: 0;
+  display: inline;
+}
+.typed-cursor{
+      opacity: 1;
+      -webkit-animation: blink 0.7s infinite;
+      -moz-animation: blink 0.7s infinite;
+      animation: blink 0.7s infinite;
+}
+@keyframes blink {
+      0% { opacity:1; }
+      50% { opacity:0; }
+      100% { opacity:1; }
+}
+@-webkit-keyframes blink {
+      0% { opacity:1; }
+      50% { opacity:0; }
+      100% { opacity:1; }
+}
+@-moz-keyframes blink {
+      0% { opacity:1; }
+      50% { opacity:0; }
+      100% { opacity:1; }
+}
