--- a/css/main.css
+++ b/css/main.css
@@ -209,12 +209,12 @@ color: #E90052;
 
 
 
-#animazione {
+#animation {
 	display: none;
 
 }
 
-#animazione-footer {
+#animation-footer {
 	display: none;
 	margin-top: 80px;
 	padding-top: 30px;
