--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,17 @@ x:-o-prefocus, hr3:after {
 }
 
 
+.cv-color {
+  margin: 100px 0;
+  color: #3B5998 !important;
+  border-color: #3B5998 !important;
+}
+
+.cv-color:hover {
+  background-color: #3B5998 !important;
+  color: #fff !important;
+}
+
 .facebook-color {
   color: #3B5998 !important;
   border-color: #3B5998 !important;
